--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "*"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.15",
+    "@babel/runtime": "^7.23.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "prop-types": "^15.5.10",
     "react-native-animatable": "^1.3.0"
