--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/runtime": "^7.23.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "prop-types": "^15.5.10",
+    "react": "^18.2.0",
     "react-native-animatable": "^1.3.0"
   }
 }
