--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "prop-types": "^15.5.10",
     "react": "^18.2.0",
-    "react-native-animatable": "^1.3.0"
+    "react-native": "^0.72.6",
+    "react-native-animatable": "^1.3.3"
   }
 }
